--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -3,6 +3,7 @@
   box-sizing: border-box;
 }
 
+
 body {
   margin: 16px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
@@ -46,40 +47,84 @@ ul {
 }
 
 
-
-
-
-
 .gallery {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-}
-
-.gallery {
-  list-style: none;
+  list-style-type: none;
+  margin: 0;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   gap: 24px;
-  row-gap: 24px;
-  padding-left: 0;
-}
-
-.gallery-link {
-  display: block;
 }
 
 .gallery-image {
   width: 360px;
-  height: 200px;
-  display: block;
-  transition: transform 0.3s ease-in-out;
+  height: 300px;
+  object-fit: cover;
 }
 
-.gallery-image:hover {
-  transform: scale(1.045);
+.feedback-form {
+  display: flex;
+  padding: 24px;
+  flex-direction: column;
+  align-items: flex-start;
+  width: max-content;
+  border-radius: 8px;
+  background: #ffffff;
+  margin-top: 24px;
+}
+
+input,
+textarea,
+label,
+button {
+  color: #2e2f42;
+  font-family: Montserrat;
+  letter-spacing: 0.64px;
+}
+
+label {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+input,
+textarea {
+  width: 360px;
+  height: 40px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 4px;
+  border: 1px solid #808080;
+  margin-bottom: 8px;
+}
+
+textarea {
+  height: 80px;
+}
+
+button {
+  margin-top: 8px;
+  display: flex;
+  padding: 8px 16px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 8px;
+  background: #4e75ff;
+  border: 0;
+  font-weight: 500;
+  color: #fff;
+  cursor: pointer;
+}
+
+button:hover,
+button:focus {
+  background: #6c8cff;
+}
+
+input:hover,
+textarea:hover {
+  border: 1px solid #000;
 }
